add store for nav

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -4,7 +4,10 @@
 $black	: #000000;
 $white 	: #FFFFFF;
 
-$primary : indianred;
+$primary : #11226B;
+$pink : #E9DDD9;
+$grey : #6B6C70;
+$lightgrey  : #DDD9D0;
 
 // ========================================
 // Screen sizes
@@ -14,4 +17,4 @@ $tablet  :		769px;
 $desktop : 		1000px;
 $fullhd  :		1384px;
 
-$headerHeight: 80px;
+$headerHeight: 60px;
