--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -5,3 +5,13 @@
 //     font-weight: normal;
 //     font-style: normal;
 // }
+
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Permanent Marker', cursive;
+}
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap');
+body, p {
+  font-family: 'Kumbh Sans', sans-serif;
+  font-weight: 300;
+}
