--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,8 +1,8 @@
 // ========================================
 // Colors
 // ========================================
-$black	: #000000;
-$white 	: #FFFFFF;
+$black	: #0c0c0c;
+$white 	: #f9f9f9;
 
 $primary : #11226B;
 $pink : #E9DDD9;
