--- a/assets/scss/_structure.scss
+++ b/assets/scss/_structure.scss
@@ -1,6 +1,13 @@
+html {
+  &.noScroll {
+    overflow: hidden;
+  }
+}
+
 body {
   background: $white;
   &.navOpen {
     overflow: hidden;
   }
+
 }
