newsletter build cont

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -9,6 +9,8 @@ $pink : #E9DDD9;
 $grey : #6B6C70;
 $lightgrey  : #DDD9D0;
 
+$darkgrey : #333747;
+
 // ========================================
 // Screen sizes
 // ========================================
@@ -18,3 +20,7 @@ $desktop : 		1000px;
 $fullhd  :		1384px;
 
 $headerHeight: 60px;
+
+$containerWidth: 1920px;
+$mediumContainerWidth: 1084px;
+$smallContainerWidth: 800px;
