--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -6,12 +6,19 @@
 //     font-style: normal;
 // }
 
+// @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,700;1,400&family=Quicksand:wght@500;700&display=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Permanent Marker', cursive;
+  // font-family: 'Permanent Marker', cursive;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 700;
 }
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap');
 body, p {
-  font-family: 'Kumbh Sans', sans-serif;
-  font-weight: 300;
+  font-family: 'EB Garamond', serif;
+  font-weight: 400;
+  // font-family: 'Kumbh Sans', sans-serif;
+  // font-weight: 300;
 }
