responsive image start

--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -14,11 +14,37 @@ h1, h2, h3, h4, h5, h6 {
   // font-family: 'Permanent Marker', cursive;
   font-family: 'Quicksand', sans-serif;
   font-weight: 700;
+  display: block;
+  max-width: 960px;
 }
+
+p {
+  max-width: 720px;
+  display: block;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap');
 body, p {
   font-family: 'EB Garamond', serif;
   font-weight: 400;
   // font-family: 'Kumbh Sans', sans-serif;
   // font-weight: 300;
+}
+
+h1 {
+  font-size: 100px;
+  font-size: clamp(75px, 7.2vw, 150px);
+  line-height: 90%;
+}
+
+h2 {
+  font-size: 75px;
+  font-size: clamp(40px, 4.5vw, 110px);
+  line-height: 90%;
+}
+
+p {
+  font-size: 20px;
+  font-size: clamp(18px, 1.6vw, 28px);
+  line-height: 100%;
 }
