--- a/assets/scss/_all.scss
+++ b/assets/scss/_all.scss
@@ -1,6 +1,7 @@
-@import "reset";
-@import "variables";
-@import "fonts";
-@import "mixins";
-@import "mediaquery";
-@import "structure";
+@import 'reset';
+@import 'variables';
+@import 'fonts';
+@import 'mixins';
+@import 'mediaquery';
+@import 'structure';
+@import 'customproperties';
