--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,23 +1,23 @@
 // ========================================
 // Colors
 // ========================================
-$black	: #0c0c0c;
-$white 	: #f9f9f9;
+$black: #0c0c0c;
+$white: #f9f9f9;
 
-$primary : #11226B;
-$pink : #E9DDD9;
-$grey : #6B6C70;
-$lightgrey  : #DDD9D0;
+$primary: #11226b;
+$pink: #e9ddd9;
+$grey: #6b6c70;
+$lightgrey: #ddd9d0;
 
-$darkgrey : #333747;
+$darkgrey: #333747;
 
 // ========================================
 // Screen sizes
 // ========================================
-$mobile  :		480px;
-$tablet  :		769px;
-$desktop : 		1000px;
-$fullhd  :		1384px;
+$mobile: 480px;
+$tablet: 769px;
+$desktop: 1000px;
+$fullhd: 1384px;
 
 $headerHeight: 60px;
 
